first full completion

--- a/index.html
+++ b/index.html
@@ -363,8 +363,7 @@ team</li>
 
           </div>
 
-          <div class="subheading mb-3">Tools</div>
-
+          <div class="subheading mb-3" style="margin-top:10px">Tools</div>
           <div class="col-lg-12">
             <div class="row">
               <div class="col-lg-3">
@@ -377,7 +376,7 @@ team</li>
 
             <div class="row">
               <div class="col-lg-3">
-                <i class="fab fa-r-project"></i> R Programming
+                <i class="fas fa-tools"></i> Tensorflow
               </div>
               <div class="col-lg-9">
                 <div class="skillbar" style="width:60%"></div>
@@ -386,16 +385,7 @@ team</li>
 
             <div class="row">
               <div class="col-lg-3">
-                <i class="fab fa-java"></i>&ensp;</i> Java
-              </div>
-              <div class="col-lg-9">
-                <div class="skillbar" style="width:50%"></div>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-lg-3">
-                <i class="fas fa-database"></i>&ensp;</i> SQL
+                <i class="fas fa-cubes"></i>&ensp;</i> Scikit-Learn
               </div>
               <div class="col-lg-9">
                 <div class="skillbar" style="width:70%"></div>
@@ -404,34 +394,77 @@ team</li>
 
             <div class="row">
               <div class="col-lg-3">
-                <i class="fas fa-laptop"></i>&ensp;</i> C/C++
+                <i class="fas fa-cloud"></i> Hadoop(Cloudera)
               </div>
               <div class="col-lg-9">
-                <div class="skillbar" style="width:40%"></div>
+                <div class="skillbar" style="width:50%"></div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-3">
+                <i class="fas fa-headphones"></i>&ensp;</i> Kaldi ASR
+              </div>
+              <div class="col-lg-9">
+                <div class="skillbar" style="width:60%"></div>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="subheading mb-3" style="margin-top:10px">Technology</div>
+          <div class="col-lg-12">
+            <div class="row">
+              <div class="col-lg-3">
+                <i class="fas fa-brain"></i>&ensp;</i> Machine Learning
+              </div>
+              <div class="col-lg-9">
+                <div class="skillbar" style="width:80%"></div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-3">
+                <i class="fas fa-chart-bar"></i> Statistical Modelling
+              </div>
+              <div class="col-lg-9">
+                <div class="skillbar" style="width:80%"></div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-3">
+                <i class="fas fa-dice-d20"></i>&ensp;</i> Neural Networks
+              </div>
+              <div class="col-lg-9">
+                <div class="skillbar" style="width:60%"></div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-3">
+                <i class="fas fa-headphones"></i>&ensp;</i> Speech Recognition Engine
+              </div>
+              <div class="col-lg-9">
+                <div class="skillbar" style="width:60%"></div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-3">
+                <i class="fas fa-dna"></i>&ensp;</i> Genetic Algorithm
+              </div>
+              <div class="col-lg-9">
+                <div class="skillbar" style="width:60%"></div>
               </div>
             </div>
 
           </div>
 
 
-
           </div>
 
-          <div class="subheading mb-3">Workflow</div>
-          <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
-          </ul>
+
         </div>
       </section>
 
@@ -440,8 +473,13 @@ team</li>
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+          <p>Apart from being a Data Scientist</p>
+
+          <ul>
+            <li>I enjoy indian classical music <i class="fas fa-music"></i></li>
+            <li>Outdoor photography <i class="fas fa-camera-retro"></i></li>
+            <li>Simulation of Mathematical Models<i class="fas fa-signature"></i></li>
+          </ul>
         </div>
       </section>
 
@@ -453,30 +491,23 @@ team</li>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
+              Certification for Machine Learning Course online from Stanford University</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
+              Certification for Data Science Course from John Hopkins University</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
+              Place - IIT Kanpur,India - Techkriti Robotics Competition</li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              2<sup>st</sup>
+              Place - Khallikote Junior College - MathChamp Competition</li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              2<sup>nd</sup>
+              Place - Queen Of the missions High School - Budding Science Competition</li>
+
           </ul>
         </div>
       </section>
