correcting spelling mistake

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ team</li>
               Place - IIT Kanpur,India - Techkriti Robotics Competition</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>st</sup>
+              2<sup>nd</sup>
               Place - Khallikote Junior College - MathChamp Competition</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
