--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </h1>
           <div class="subheading mb-5">
             <i class="fas fa-phone-square fa-rotate-90" ></i>&ensp; +601110122468 &emsp;
-            <a href="mailto:name@email.com"><i class="fa fa-envelope" aria-hidden="true"></i>&ensp; surjyapadhi777@gmail.com</a>
+            <a href="mailto:surjyapadhi777@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i>&ensp; surjyapadhi777@gmail.com</a>
           </div>
           <p class="lead mb-5">I am a data Scientist with 6+ years of experience in interpreting and analysing data for driving business solutions.
              Proficient knowledge in mathematics, statistics, data analytics and predictive modelling</p>
