--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <p class="lead mb-5">I am a data Scientist with 6+ years of experience in interpreting and analysing data for driving business solutions.
              Proficient knowledge in mathematics, statistics, data analytics and predictive modelling</p>
 
-          <p class="lead mb-5">I am good in developing web services using Python Django Framework</p>
+          <p class="lead mb-5">I am good in developing web services using Python Django Framework.</p>
           <div class="social-icons">
             <a href="#">
               <i class="fab fa-linkedin-in"></i>
